Fixes #1172 - moves links out of headings

--- a/files/en-us/mozilla/add-ons/webextensions/working_with_the_tabs_api/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/working_with_the_tabs_api/index.html
@@ -299,11 +299,15 @@ Define the other menu items
 
 <p>{{EmbedYouTube("-lJRzTIvhxo")}}</p>
 
-<h4 id="manifest.json_2"><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/manifest.json">manifest.json</a></h4>
+<h4 id="manifest.json_2">manifest.json</h4>
+
+<p><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/manifest.json">manifest.json</a></p>
 
 <p>None of the functions require a permission to operate, so there are no features in the <code>manifest.json</code> file that need to be highlighted.</p>
 
-<h4 id="tabs.html_2"><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.html">tabs.html</a></h4>
+<h4 id="tabs.html_2">tabs.html</h4>
+
+<p><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.html">tabs.html</a></p>
 
 <p>tabs.html defines the “menu” displayed in the popup, which includes the “Move active tab to the beginning of the window list” option, with a series of <code>&lt;a&gt;</code> tags grouped by a visual separator. Each menu item is given an <code>id</code>, which is used in <code>tabs.js</code> to determine which menu item is being requested.</p>
 
@@ -317,7 +321,9 @@ Define the other menu items
     &lt;a href="#" id="tabs-reload"&gt;Reload active tab&lt;/a&gt;&lt;br&gt;
     &lt;a href="#" id="tabs-alertinfo"&gt;Alert active tab info&lt;/a&gt;&lt;br&gt;</pre>
 
-<h4 id="tabs.js_2"><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.js">tabs.js</a></h4>
+<h4 id="tabs.js_2">tabs.js</h4>
+
+<p><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.js">tabs.js</a></p>
 
 <p>To implement the “menu” defined in <code>tabs.html</code>, <code>tabs.js</code> includes a listener for clicks in <code>tabs.html</code>:</p>
 
@@ -409,15 +415,21 @@ Define the other menu items
 
 <p>Let’s take a look at how the zoom in is implemented.</p>
 
-<h4 id="manifest.json_3"><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/manifest.json">manifest.json</a></h4>
+<h4 id="manifest.json_3">manifest.json</h4>
+
+<p><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/manifest.json">manifest.json</a></p>
 
 <p>None of the zoom functions require permissions, so there are no features in the <code>manifest.json</code> file that need to be highlighted.</p>
 
-<h4 id="tabs.html_3"><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.html">tabs.html</a></h4>
+<h4 id="tabs.html_3">tabs.html</h4>
+
+<p><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.html">tabs.html</a></p>
 
 <p>We have already discussed how the <code>tabs.html</code> defines the options for this extension, nothing new or unique is done to provide the zoom options.</p>
 
-<h4 id="tabs.js_3"><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.js">tabs.js</a></h4>
+<h4 id="tabs.js_3">tabs.js</h4>
+
+<p><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.js">tabs.js</a></p>
 
 <p><code>tabs.js</code> starts by defining several constants used in the zoom code:</p>
 
@@ -466,7 +478,9 @@ const DEFAULT_ZOOM = 1;
 
 <p>Let’s walk through how it’s set up.</p>
 
-<h4 id="manifest.json_4"><a href="https://github.com/mdn/webextensions-examples/blob/master/apply-css/manifest.json">manifest.json</a></h4>
+<h4 id="manifest.json_4">manifest.json</h4>
+
+<p><a href="https://github.com/mdn/webextensions-examples/blob/master/apply-css/manifest.json">manifest.json</a></p>
 
 <p>To use the CSS features you need either:</p>
 
@@ -513,7 +527,9 @@ const DEFAULT_ZOOM = 1;
 	<li><strong>a “page action”</strong>, which defines an icon to be added to the browser’s address bar.</li>
 </ul>
 
-<h4 id="background.js"><a href="https://github.com/mdn/webextensions-examples/blob/master/apply-css/background.js">background.js</a></h4>
+<h4 id="background.js">background.js</h4>
+
+<p><a href="https://github.com/mdn/webextensions-examples/blob/master/apply-css/background.js">background.js</a></p>
 
 <p>On startup, background.js sets some constants to define the CSS to be applied, titles for the “page action”, and a list of protocols the extension will work in:</p>
 
