--- a/files/en-us/web/svg/attribute/index.html
+++ b/files/en-us/web/svg/attribute/index.html
@@ -401,11 +401,15 @@ tags:
 
 <h3 id="Generic_attributes">Generic attributes</h3>
 
-<h4 id="Core_attributes"><a href="/en-US/docs/Web/SVG/Attribute/Core">Core attributes</a></h4>
+<h4 id="Core_attributes">Core attributes</h4>
+
+<p><a href="/en-US/docs/Web/SVG/Attribute/Core">Core attributes</a></p>
 
 <p>{{SVGAttr("id")}}, {{SVGAttr("lang")}}, {{SVGAttr("tabindex")}}, {{SVGAttr("xml:base")}}, {{SVGAttr("xml:lang")}}, {{SVGAttr("xml:space")}}</p>
 
-<h4 id="Style_attributes"><a href="/en-US/docs/Web/SVG/Attribute/Styling">Style attributes</a></h4>
+<h4 id="Style_attributes">Style attributes</h4>
+
+<p><a href="/en-US/docs/Web/SVG/Attribute/Styling">Style attributes</a></p>
 
 <p>{{SVGAttr("class")}}, {{SVGAttr("style")}}</p>
 
@@ -457,19 +461,27 @@ tags:
 
 <h3 id="Event_attributes">Event attributes</h3>
 
-<h4 id="Animation_event_attributes"><a href="/en-US/docs/Web/SVG/Attribute/Events#animation_event_attributes">Animation event attributes</a></h4>
+<h4 id="Animation_event_attributes">Animation event attributes</h4>
+
+<p><a href="/en-US/docs/Web/SVG/Attribute/Events#animation_event_attributes">Animation event attributes</a></p>
 
 <p><strong><code>onbegin</code></strong>, <strong><code>onend</code></strong>, <strong><code>onrepeat</code></strong></p>
 
-<h4 id="Document_event_attributes"><a href="/en-US/docs/Web/SVG/Attribute/Events#document_event_attributes">Document event attributes</a></h4>
+<h4 id="Document_event_attributes">Document event attributes</h4>
+
+<p><a href="/en-US/docs/Web/SVG/Attribute/Events#document_event_attributes">Document event attributes</a></p>
 
 <p><strong><code>onabort</code></strong>, <strong><code>onerror</code></strong>, <strong><code>onresize</code></strong>, <strong><code>onscroll</code></strong>, <strong><code>onunload</code></strong></p>
 
-<h4 id="Global_event_attributes"><a href="/en-US/docs/Web/SVG/Attribute/Events#global_event_attributes">Global event attributes</a></h4>
+<h4 id="Global_event_attributes">Global event attributes</h4>
+
+<p><a href="/en-US/docs/Web/SVG/Attribute/Events#global_event_attributes">Global event attributes</a></p>
 
 <p><code><strong>oncancel</strong></code>, <code><strong>oncanplay</strong></code>, <code><strong>oncanplaythrough</strong></code>, <code><strong>onchange</strong></code>, <code><strong>onclick</strong></code>, <code><strong>onclose</strong></code>, <code><strong>oncuechange</strong></code>, <code><strong>ondblclick</strong></code>, <code><strong>ondrag</strong></code>, <code><strong>ondragend</strong></code>, <code><strong>ondragenter</strong></code>, <code><strong>ondragleave</strong></code>, <code><strong>ondragover</strong></code>, <code><strong>ondragstart</strong></code>, <code><strong>ondrop</strong></code>, <code><strong>ondurationchange</strong></code>, <code><strong>onemptied</strong></code>, <code><strong>onended</strong></code>, <code><strong>onerror</strong></code>, <code><strong>onfocus</strong></code>, <code><strong>oninput</strong></code>, <code><strong>oninvalid</strong></code>, <code><strong>onkeydown</strong></code>, <code><strong>onkeypress</strong></code>, <code><strong>onkeyup</strong></code>, <code><strong>onload</strong></code>, <code><strong>onloadeddata</strong></code>, <code><strong>onloadedmetadata</strong></code>, <code><strong>onloadstart</strong></code>, <code><strong>onmousedown</strong></code>, <code><strong>onmouseenter</strong></code>, <code><strong>onmouseleave</strong></code>, <code><strong>onmousemove</strong></code>, <code><strong>onmouseout</strong></code>, <code><strong>onmouseover</strong></code>, <code><strong>onmouseup</strong></code>, <code><strong>onmousewheel</strong></code>, <code><strong>onpause</strong></code>, <code><strong>onplay</strong></code>, <code><strong>onplaying</strong></code>, <code><strong>onprogress</strong></code>, <code><strong>onratechange</strong></code>, <code><strong>onreset</strong></code>, <code><strong>onresize</strong></code>, <code><strong>onscroll</strong></code>, <code><strong>onseeked</strong></code>, <code><strong>onseeking</strong></code>, <code><strong>onselect</strong></code>, <code><strong>onshow</strong></code>, <code><strong>onstalled</strong></code>, <code><strong>onsubmit</strong></code>, <code><strong>onsuspend</strong></code>, <code><strong>ontimeupdate</strong></code>, <code><strong>ontoggle</strong></code>, <code><strong>onvolumechange</strong></code>, <code><strong>onwaiting</strong></code></p>
 
-<h4 id="Graphical_event_attributes"><a href="/en-US/docs/Web/SVG/Attribute/Events#graphical_event_attributes">Graphical event attributes</a></h4>
+<h4 id="Graphical_event_attributes">Graphical event attributes</h4>
+
+<p><a href="/en-US/docs/Web/SVG/Attribute/Events#graphical_event_attributes">Graphical event attributes</a></p>
 
 <p><strong><code>onactivate</code></strong>, <strong><code>onfocusin</code></strong>, <strong><code>onfocusout</code></strong></p>
 
