--- a/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
@@ -111,7 +111,9 @@ setCookie.then(logCookie, logError);</pre>
 
 <p>The rest of this section describes compatibility issues that are not already captured in the tables.</p>
 
-<h4 id="notifications"><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/notifications" id="notifications_incompatibilities">notifications</a></h4>
+<h4 id="notifications">notifications</h4>
+
+<p><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/notifications" id="notifications_incompatibilities">notifications</a></p>
 
 <ul>
  <li>
@@ -143,7 +145,9 @@ setCookie.then(logCookie, logError);</pre>
  </li>
 </ul>
 
-<h4 id="proxy"><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/proxy" id="proxy_incompatibilities">proxy</a></h4>
+<h4 id="proxy">proxy</h4>
+
+<p><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/proxy" id="proxy_incompatibilities">proxy</a></p>
 
 <p>Firefox's Proxy API followed a completely different design from Chrome's Proxy API.</p>
 
@@ -156,7 +160,9 @@ setCookie.then(logCookie, logError);</pre>
  </dd>
 </dl>
 
-<h4 id="tabs"><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/tabs" id="tabs_incompatibilities">tabs</a></h4>
+<h4 id="tabs">tabs</h4>
+
+<p><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/tabs" id="tabs_incompatibilities">tabs</a></p>
 
 <ul>
  <li>
@@ -196,7 +202,9 @@ setCookie.then(logCookie, logError);</pre>
  </li>
 </ul>
 
-<h4 id="webRequest"><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/webRequest" id="webRequest_incompatibilities">webRequest</a></h4>
+<h4 id="webRequest">webRequest</h4>
+
+<p><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/webRequest" id="webRequest_incompatibilities">webRequest</a></p>
 
 <dl>
  <dt>In Firefox</dt>
@@ -235,7 +243,9 @@ setCookie.then(logCookie, logError);</pre>
  </li>
 </ul>
 
-<h4 id="windows"><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/windows" id="windows_incompatibilities">windows</a></h4>
+<h4 id="windows">windows</h4>
+
+<p><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/windows" id="windows_incompatibilities">windows</a></p>
 
 <dl>
  <dt>In Firefox</dt>
@@ -244,7 +254,9 @@ setCookie.then(logCookie, logError);</pre>
 
 <h3 id="Unsupported_APIs">Unsupported APIs</h3>
 
-<h4 id="declarativeContent"><a href="https://developer.chrome.com/extensions/declarativeContent" id="declarativeContent_incompatibilities" name="dec">declarativeContent</a></h4>
+<h4 id="declarativeContent">declarativeContent</h4>
+
+<p><a href="https://developer.chrome.com/extensions/declarativeContent" id="declarativeContent_incompatibilities" name="dec">declarativeContent</a></p>
 
 <dl>
  <dt>In Firefox</dt>
