moves single heading to text

--- a/files/en-us/web/accessibility/seizure_disorders/index.html
+++ b/files/en-us/web/accessibility/seizure_disorders/index.html
@@ -524,7 +524,7 @@ tags:
 
 <h4 id="Media_Queries_Level_5">Media Queries Level 5</h4>
 
-<h5 id="EnvironmentMQ_Planned_in_Media_Queries_Level_5">EnvironmentMQ (Planned in Media Queries Level 5)</h5>
+<p>EnvironmentMQ (Planned in Media Queries Level 5)</p>
 
 <dl>
   <dt>light-level</dt>
