fixes changed dt's

--- a/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
@@ -305,7 +305,7 @@ setCookie.then(logCookie, logError);</pre>
     </dl>
   </dd>
     
-  <dt>property</dt>
+  <dt>Manifest "key" property</dt>
   <dd>
     <dl>
      <dt>In Chrome</dt>
@@ -347,7 +347,7 @@ setCookie.then(logCookie, logError);</pre>
     </dl>
   </dd>  
 
-  <dt>zoom behavior</dt>
+  <dt>"per-tab" zoom behavior</dt>
   <dd>
     <p>See {{WebExtAPIRef("tabs.ZoomSettingsScope")}}</p>
     <dl>
