--- a/files/en-us/web/accessibility/aria/roles/meter_role/index.html
+++ b/files/en-us/web/accessibility/aria/roles/meter_role/index.html
@@ -11,7 +11,7 @@ tags:
 
 <h2 id="Description">Description</h2>
 
-<p>A meter is a graphical display of a numeric value within a defined range. For example, showing battery percentage. A meter is not appropriate for values that do not have a meaningful maximum limit. Meters should not be used to indicate progress (for example loading), this should be communicated with the <code>progress</code> role.</p>
+<p>A meter is a graphical display of a numeric value within a defined range. For example, showing battery percentage. A meter is not appropriate for values that do not have a meaningful maximum limit. Meters should not be used to indicate progress (for example loading), this should be communicated with the <code>progress</code> element.</p>
 
 <p>Each element with <code>role="meter"</code> must also have one of the following:</p>
 
