FF93 KeyboardEvent.initKeyEvent() hidden behind preference (#8793)
* FF93 KeyboardEvent.initKeyEvent() hidden behind preference

* Add release note

--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -52,7 +52,15 @@ tags:
 
 <h4 id="DOM">DOM</h4>
 
+
+
 <h4 id="Media_WebRTC_and_Web_Audio">Media, WebRTC, and Web Audio</h4>
+
+<h4 id="Events">Events</h4>
+<ul>
+  <li>{{domxref("KeyboardEvent.initKeyEvent()")}} has been moved behind the preference <code>dom.keyboardevent.init_key_event.enabled</code> and is disabled by default.
+    The method is not present in any current specification or supported in other current browsers ({{bug(1717760)}}).</li>
+</ul>
 
 <h4 id="removals_media">Removals</h4>
 
