--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -46,7 +46,7 @@ tags:
 <h3 id="APIs">APIs</h3>
 
 <ul>
-  <li>{{domxref("ElementInternals.shadowRoot")}} and {{domxref("HTMLElement.attachInternals")}} is now supported ({{bug(1723521)}}).</li>
+  <li>{{domxref("ElementInternals.shadowRoot")}} and {{domxref("HTMLElement.attachInternals")}} are now supported ({{bug(1723521)}}).</li>
   <li>The value <code>device-pixel-content-box</code> is now supported for {{domxref("ResizeObserver.Observe()")}} ({{bug(1587973)}}).</li>
 </ul>
 
