--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -17,6 +17,10 @@ tags:
 
 <h3 id="HTML">HTML</h3>
 
+<ul>
+  <li>The UI for <a href="/docs/Web/HTML/Element/input/datetime-local"><code>&lt;input type="datetime-local"&gt;</code></a> has been implemented. ({{bug(1283388)}}).</li>
+</ul>
+
 <h4 id="removals_html">Removals</h4>
 
 <h3 id="CSS">CSS</h3>
