Mention of lack of support for aria-owns

--- a/files/en-us/learn/accessibility/wai-aria_basics/index.html
+++ b/files/en-us/learn/accessibility/wai-aria_basics/index.html
@@ -409,6 +409,10 @@ tags:
 &lt;/div&gt;</pre>
 
 <div class="note">
+ <p><strong>Note</strong>: This pattern is <em>not supported by Voice Over in WebKit browsers</em> due to the lack of support for <code><a href="https://www.w3.org/TR/wai-aria-1.1/#aria-owns">aria-owns</a></code> in WebKit (<a href="https://bugs.webkit.org/show_bug.cgi?id=223798">Bug 223798</a>).</p>
+</div>
+
+<div class="note">
 <p><strong>Note</strong>: If there is anything you explicitly don't want screen readers to read out, you can give them the <code>aria-hidden="true"</code>  attribute.</p>
 </div>
 
