--- a/files/en-us/glossary/https_rr/index.html
+++ b/files/en-us/glossary/https_rr/index.html
@@ -8,8 +8,10 @@ tags:
   - Infrastructure
   - Security
 ---
-<p><strong>HTTPS RR</strong> (<strong><em>HTTPS Resource Records</em></strong>) are a type of DNS record that delivers configuration information and parameters for how to access a service via {{Glossary("HTTPS")}}.
-  Among other things, the presence of an HTTPS RR record signals that all useful {{Glossary("HTTP")}} resources on the origin are reachable over HTTPS, which in turn means that a browser can upgrade connections to the domain from HTTP to HTTPS. </p>
+<p><strong>HTTPS RR</strong> (<strong><em>HTTPS Resource Records</em></strong>) are a type of DNS record that delivers configuration information and parameters for how to access a service via {{Glossary("HTTPS")}}.</p>
+
+<p>An <em>HTTPS RR</em> can be used to optimize the process of connecting to a service using HTTPS.
+  Further, the presence of an <em>HTTPS RR</em> signals that all useful {{Glossary("HTTP")}} resources on the origin are reachable over HTTPS, which in turn means that a browser can safely upgrade connections to the domain from HTTP to HTTPS. </p>
 
 <h3>See also</h3>
 
