removes duplicated id

--- a/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/chrome_incompatibilities/index.html
@@ -261,7 +261,7 @@ setCookie.then(logCookie, logError);</pre>
   <dl>
     <dt>DeclarativeContent API</dt>
     <dd>
-      <p id="declarative_content_incompatibilities">Chrome's <a href="https://developer.chrome.com/extensions/declarativeContent" id="declarativeContent_incompatibilities" name="dec">declarativeContent</a> API <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1435864">has not yet been implemented</a> in Firefox:</p>     
+      <p id="declarative_content_incompatibilities">Chrome's <a href="https://developer.chrome.com/extensions/declarativeContent" name="dec">declarativeContent</a> API <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1435864">has not yet been implemented</a> in Firefox:</p>     
       <dl>
        <dt>In Firefox</dt>
        <dd>In addition, Firefox <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1323433#c16">will not be supporting</a> the <code>declarativeContent.RequestContentScript</code> API (which is rarely used, and is unavailable in stable releases of Chrome).</dd>
