--- a/files/en-us/games/examples/index.html
+++ b/files/en-us/games/examples/index.html
@@ -14,6 +14,8 @@ tags:
 <h2 id="Freedemo_games">Free/demo games</h2>
 
 <dl>
+ <dt><a href="https://www.voidspacegame.com">Voidspace</a></dt>
+ <dd>A 2D MMORPG video game that makes use of WebGL to allow people to play directly in the browser.</dd>
  <dt><a href="http://www.beloola.com">Beloola</a></dt>
  <dd>WebVR platform to connect passionate people. Experience both available on 2D screens and on VR HMDs (<em>Settings / Switch to VR mode</em>).</dd>
  <dt><a href="https://playcanv.as/p/aP0oxhUr">Tanx</a></dt>
