made body a hyperlink

--- a/files/en-us/web/html/element/header/index.html
+++ b/files/en-us/web/html/element/header/index.html
@@ -83,7 +83,7 @@ browser-compat: html.elements.header
 
 <h2 id="Accessibility">Accessibility</h2>
 
-<p>The <code>&lt;header></code> element defines a <a href="/en-US/docs/Web/Accessibility/ARIA/Roles/Banner_role"><code>banner</code></a> landmark when its context is the body element. The HTML header element is not considered a banner landmark when it is descendant of an  {{HTMLElement('article')}},  {{HTMLElement('aside')}},  {{HTMLElement('main')}},  {{HTMLElement('nav')}}, or {{HTMLElement('section')}} element. 
+<p>The <code>&lt;header></code> element defines a <a href="/en-US/docs/Web/Accessibility/ARIA/Roles/Banner_role"><code>banner</code></a> landmark when its context is the {{HTMLElement('body')}} element. The HTML header element is not considered a banner landmark when it is descendant of an  {{HTMLElement('article')}},  {{HTMLElement('aside')}},  {{HTMLElement('main')}},  {{HTMLElement('nav')}}, or {{HTMLElement('section')}} element. 
 
 
 <h2 id="Specifications">Specifications</h2>
