Revert code format removal

--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/content_scripts/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/content_scripts/index.html
@@ -78,7 +78,7 @@ browser-compat: webextensions.manifest.content_scripts
    <td><a id="css"><code>css</code></a></td>
    <td><code>Array</code></td>
    <td>
-    <p>An array of paths, relative to the manifest.json file, referencing CSS files that will be injected into matching pages.</p>
+    <p>An array of paths, relative to <code>manifest.json</code>, referencing CSS files that will be injected into matching pages.</p>
 
     <p>Files are injected in the order given, and at the time specified by <code><a href="#run_at">run_at</a></code>.</p>
 
