encloses leftover filenames in code blocks

--- a/files/en-us/mozilla/add-ons/webextensions/working_with_the_tabs_api/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/working_with_the_tabs_api/index.html
@@ -312,7 +312,7 @@ tags:
 
   <dt>tabs.html</dt>
   <dd>
-    <p><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.html">tabs.html</a> defines the “menu” displayed in the popup, which includes the “Move active tab to the beginning of the window list” option, with a series of <code>&lt;a&gt;</code> tags grouped by a visual separator. Each menu item is given an <code>id</code>, which is used in <code>tabs.js</code> to determine which menu item is being requested.</p>
+    <p><a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.html"><code>tabs.html</code></a> defines the “menu” displayed in the popup, which includes the “Move active tab to the beginning of the window list” option, with a series of <code>&lt;a&gt;</code> tags grouped by a visual separator. Each menu item is given an <code>id</code>, which is used in <code>tabs.js</code> to determine which menu item is being requested.</p>
     
     <pre class="brush: html">    &lt;a href="#" id="tabs-move-beginning"&gt;Move active tab to the beginning of the window&lt;/a&gt;&lt;br&gt;
         &lt;a href="#" id="tabs-move-end"&gt;Move active tab to the end of the window&lt;/a&gt;&lt;br&gt;
@@ -428,7 +428,7 @@ tags:
 
   <dt>tabs.html</dt>
   <dd>
-    <p>We have already discussed how the <a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.html">tabs.html</a> defines the options for this extension, nothing new or unique is done to provide the zoom options.</p>
+    <p>We have already discussed how the <a href="https://github.com/mdn/webextensions-examples/blob/master/tabs-tabs-tabs/tabs.html"><code>tabs.html</code></a> defines the options for this extension, nothing new or unique is done to provide the zoom options.</p>
   </dd>
 
   <dt>tabs.js</dt>
