Use code format for filename
This makes the `js` section match the `css` section

--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/content_scripts/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/content_scripts/index.html
@@ -106,7 +106,7 @@ browser-compat: webextensions.manifest.content_scripts
    <td><a id="js"><code>js</code></a></td>
    <td><code>Array</code></td>
    <td>
-    <p>An array of paths, relative to the manifest.json file, referencing JavaScript files that will be injected into matching pages.</p>
+    <p>An array of paths, relative to <code>manifest.json</code>, referencing JavaScript files that will be injected into matching pages.</p>
 
     <p>Files are injected in the order given. This means that, for example, if you include jQuery here followed by another content script, like this...</p>
 
