--- a/files/en-us/web/accessibility/seizure_disorders/index.html
+++ b/files/en-us/web/accessibility/seizure_disorders/index.html
@@ -529,8 +529,7 @@ tags:
 <dl>
   <dt>light-level</dt>
   <dd>
-    <p><a href="https://drafts.csswg.org/mediaqueries-5/#light-level">light-level</a></p>
-    <p>Has three valid values: dim, normal, and washed. Interestingly, the specification refrains from actually defining the three levels in terms of a measurement of lux, because devices with a light sensor usually adjust the brightness of the screen automatically. The specifications also note the difference in technology, such as e-ink, which remains readable in bright daylight, versus liquid crystals, which do not.</p>
+    <p><a href="https://drafts.csswg.org/mediaqueries-5/#light-level">light-level</a> has three valid values: dim, normal, and washed. Interestingly, the specification refrains from actually defining the three levels in terms of a measurement of lux, because devices with a light sensor usually adjust the brightness of the screen automatically. The specifications also note the difference in technology, such as e-ink, which remains readable in bright daylight, versus liquid crystals, which do not.</p>
   </dd>
 
   <dt>environment-blending</dt>
@@ -546,8 +545,6 @@ tags:
   <dl>
     <dt>inverted-colors</dt>
     <dd>
-      <p><a href="https://drafts.csswg.org/mediaqueries-5/#inverted">inverted-colors</a></p>
-      
       <p>According to the section, <strong><a href="https://drafts.csswg.org/mediaqueries-5/#mf-user-preferences">User Preference Media Features</a></strong> , "The <strong><a href="https://drafts.csswg.org/mediaqueries-5/#descdef-media-inverted-colors" id="ref-for-descdef-media-inverted-colors①">inverted-colors</a></strong> media feature indicates whether the content is displayed normally, or whether colors have been inverted."</p>
     </dd>
 
@@ -564,12 +561,12 @@ tags:
 
       <dt>prefers-contrast</dt>
       <dd>
-        <p><a href="https://drafts4.csswg.org/mediaqueries-5/#prefers-contrast">prefers-contrast</a></p>
-        <p>From W3C's Draft document, Media Queries Level 5 section on <code><strong>prefers-contrast</strong></code>: "<em>The <strong><code>prefers-contrast</code></strong> media feature is used to detect if the user has requested the system increase or decrease the amount of contrast between adjacent colors. For example, many users have difficulty reading text that has a small difference in contrast to the text background and would prefer a larger contrast.</em>" Sometimes there can be such a thing as too much contrast; a halo effect around text can occur in such situations and actually reduce legibility. Putting the amount of contrast in the user's control is a definite gift for accessibility.</p>
+        <p>From W3C's Draft document, Media Queries Level 5 section on <a href="https://drafts4.csswg.org/mediaqueries-5/#prefers-contrast"><code><strong>prefers-contrast</strong></code></a>: "<em>The <strong><code>prefers-contrast</code></strong> media feature is used to detect if the user has requested the system increase or decrease the amount of contrast between adjacent colors. For example, many users have difficulty reading text that has a small difference in contrast to the text background and would prefer a larger contrast.</em>" Sometimes there can be such a thing as too much contrast; a halo effect around text can occur in such situations and actually reduce legibility. Putting the amount of contrast in the user's control is a definite gift for accessibility.</p>
       </dd>
   </dl>
 
 <h4 id="MediaQueryList_Interface"><code>MediaQueryList</code> Interface</h4>
+
 <p>Section 4.2 from the CSSWG.org drafts integrates with the <strong><a href="https://html.spec.whatwg.org/multipage/webappapis.html#event-loop" id="ref-for-event-loop">event loop</a></strong> defined in HTML. <strong><a href="https://drafts.csswg.org/cssom-view/#biblio-html">[HTML]</a></strong> for the <strong><code><a href="https://drafts.csswg.org/cssom-view/#mediaquerylist" id="ref-for-mediaquerylist③">MediaQueryList</a></code></strong> object. See the MDN document, <strong><a href="/en-US/docs/Web/API/MediaQueryList">MediaQueryList</a></strong> for more information.</p>
 
 <h4 id="Personalization_Help_and_Support">Personalization Help and Support</h4>
