Fix #6763 - Angular Tutorial Method Signature
Fixes #6763
The default to strict mode in the tsconfig for setting up an angular project as suggested in this article will give an error for this method due to the implicit any type of the parameter

```
Error: src/app/app.component.ts:28:11 - error TS7006: Parameter 'description' implicitly has an 'any' type.

28   addItem(description) {
             ~~~~~~~~~~~
```

--- a/files/en-us/learn/tools_and_testing/client-side_javascript_frameworks/angular_todo_list_beginning/index.html
+++ b/files/en-us/learn/tools_and_testing/client-side_javascript_frameworks/angular_todo_list_beginning/index.html
@@ -174,7 +174,7 @@ What would you like to do today?
 
 <p>In <code>app.component.ts</code>, add the following method to the class:</p>
 
-<pre class="brush: js">addItem(description) {
+<pre class="brush: js">addItem(description: string) {
   this.allItems.unshift({
     description,
     done: false
