Fix unconvertible <dl> elements in HTML

--- a/files/en-us/web/html/element/a/index.html
+++ b/files/en-us/web/html/element/a/index.html
@@ -27,8 +27,7 @@ browser-compat: html.elements.a
 
 <dl>
  <dt id="download">{{HTMLAttrDef("download")}}</dt>
- <dd>Prompts the user to save the linked URL instead of navigating to it. Can be used with or without a value:</dd>
- <dd>
+ <dd><p>Prompts the user to save the linked URL instead of navigating to it. Can be used with or without a value:</p>
  <ul>
   <li>Without a value, the browser will suggest a filename/extension, generated from various sources:
    <ul>
@@ -419,7 +418,7 @@ document.querySelector('a').addEventListener('click', event =&gt;
   &lt;/header&gt;
 
   &lt;main id="content"&gt; &lt;/main&gt; &lt;!-- The skip link jumps to here --&gt;
-  
+
 &lt;/body&gt;
 </pre>
 
